Enable the durable-commit fast path by default and harden it (#1159)
* Enable the durable-commit fast path by default and harden it

Turn on sirix.commit.preallocated and sirix.commit.bufferedBeacons by
default on the FILE_CHANNEL backend: five device round-trips per durable
commit become three (grow-file fsync barrier -> journal-free fdatasync;
two O_DSYNC beacon writes -> one buffered fdatasync). Measured on the
versioned-document benchmark this lifts durable single-field commits
from 118/s to ~180/s and narrows the gap to PostgreSQL 16 from 9.3x to
~6x (docs/COMPARISON_POSTGRES.md 0.1).

Preallocation is now adaptive: the data file doubles per grow from a
256 KiB floor to the 8 MiB sirix.commit.preallocChunkBytes cap, so a
small resource carries roughly its own size of physically-allocated
padding instead of a fixed 8 MiB; the revisions file grows in 64 KiB
chunks (2,048 records) instead of 8 MiB through its O_DSYNC channel.
growFile reuses a static zero block instead of allocating a 1 MiB
direct buffer per grow. The MEMORY_MAPPED backend pins the legacy grow
path via a new constructor flag: its readers only remap on physical
file growth, which in-place preallocated commits never trigger.

The reader now rejects zero-length page headers, so a stale reference
into the zero-filled preallocation tail fails with the clean
corrupt-page diagnostic instead of an opaque pipeline error.

Scale the revision-root page cache: the fixed 5,000-entry cap silently
thrashed any history longer than that under random point-in-time
access. The default is now 20,000 and configurable via a validated
sirix.cache.revisionRoot.max.entries property (PROP_ constant,
warn-and-default on invalid values, no more eager full-size Caffeine
table). Random point-in-time reads on a 5,001-revision history drop
from 450-565 us/read with multi-second eviction cliffs to ~311 us/read.

Tests updated for the new defaults without losing invariants:
truncate-to-revision asserts strict physical shrinkage un